assets/css/stocks.css
.nav-text-1{
    color: orange;
    font-size: 16px;
}

.nav-text-2{
    color: white;
    font-size: 16px;
}

.navbar_navbar-expand-lg_navbar-light_bg-dark{
    background-color: black;
    font-size: 16px;
}
.navbar-nav{
    font-size: 16px;
}




.col-md-3{
    background-color: #343a40;
    color: white;
    border: 1px bold orange;
    height: 200px;
    margin: 10px;
}
.containertitle{
    color: orange;
}

hr{
    border: 1px solid orange;
}

#footer{
    background-color: #666666;
    position: absolute;
    bottom: 0px;
    height: 50px;
    width: 100%;
    text-align: center;
    border-top: 8px solid orange;
    color: white;
}

.container{
    margin-top: 15px;
    width: 60%;
    
}

.search{
   bottom: 30px;
}

.card{
    float: left;
    margin: 30px;
   
}



.card2{
    float:right;
    margin-top: 0px;
    height: 50px;
    margin-right: 75px;
    
}


.row{
 
    bottom: 50px;
    overflow: auto;
}

.jumbotron{
    height: 450px;
}

.stocks{
   
    top: -40px;
}


.clearfix::after {
    content: "";
    clear: both;
    display: table;
  };

  
ul{
    list-style-type:none
}

.list-group-flush{
    list-style-type: none;
    
}

img{
    width: 180px;
    height: 70px;
    
}

.price1{
    padding-top: 5px;
    font-size: 34px;
    padding-bottom: 20px;
    text-align: center;

}



.key{
    text-align: left;
    font-size: 24px;
}

.high{
    text-align: left;
    font-size: 20px;
}

.center{
    font-size: 20px;
    position: fixed;
    left: 40%;
}


table {
    width: 100%;
    margin: 10px;
    font-size: 20px;
    padding: 10px;
  }
  
  th {
    height: 50px;
  }






.area1{
    color: red;
}



  @media screen and (max-width: 600px) {
    #body {
      margin-left: 50px;
      margin-right: 50px;
    }
  }

  @media screen and (max-width: 800px) {
    #footer{
        position: sticky;
    }
  }

